add report link
